Added blog link to header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
     <ul>
       <li class="header-block"><%= link_to "Welcome", "/" %></li>
       <li class="header-block"><%= link_to "Portfolio", "/portfolio" %></li>
+      <li class="header-block"><%= link_to "Medium Blog", "https://medium.com/" %></li>
     </ul>
   </nav>
   <div class="user-name header-block">
