Added about and contact pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,12 @@
       <li class="header-block"><%= link_to "Welcome", "/" %></li>
       <li class="header-block"><%= link_to "Portfolio", "/portfolio" %></li>
       <li class="header-block"><%= link_to "Medium Blog", "https://medium.com/" %></li>
+      <li class="header-block"><%= link_to "About", "/about" %></li>
+      <li class="header-block"><%= link_to "Contact", "/contact" %></li>
     </ul>
   </nav>
   <div class="user-name header-block">
-    <h2>Kodirus Steinmann</h2>
+    <h2>Dmitry Korobko</h2>
   </div>
 </header>
 
